2009-04-05  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Added feature #11016: Implement RSA authentication for BE and FE -- part 1 (add rsaauth system extension)
	* Added feature #11016: Implement RSA authentication for BE and FE -- part 2 (fix hard-coded stuff in the TYPO3 login procedure)

2009-05-03  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11024: Typo issue in t3lib_cache_backend_DbBackend (thanks to Xavier Perseguers)
	* Added feature #10985: Conversion from camelcase to underscores, and back (thanks to Jochen Rau)
	* Added feature #10666: Integrate automatic line breaks in GIFBUILDER

2009-05-01  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10967: Validation issue: unescaped & or unknown entity "&returnUrl" in typo3/file_list.php
	* Fixed bug #10968: Validation issue: Missing </form> in typo3/file_newfolder.php
	* Fixed bug #10969: Validation issue: Missing </form> in typo3/file_rename.php
	* Fixed bug #10970: Validation issue: Missing </div> in typo3/sysext/cms/layout/db_new_content_el.php

2009-04-30  Francois Suter  <francois@typo3.org>

	* Added feature: #10651: Add <abbr> tag to hints SL, GL, SGL in EM (thanks to Steffen Gebert)

2009-04-29  Steffen Kamper  <info@sk-typo3.de>

	* Added feature #10158: Credits to coredevs

2009-04-29  Oliver Hader  <oliver@typo3.org>

	* Added feature #10869: Integrate hook to pre-process the frontend rendering

2009-04-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #11003: htmlArea RTE: empty mutuallyExclusiveClasses array may cause js error

2009-04-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9991: Localize versioning module
	* Fixed bug #10550: Listview: default limits are hardcoded
	* Fixed bug #10698: Filecache: Clear all caches doesn't clear tags directory

2009-04-28  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed whitespaces in admin panel
	* Fixed bug #10331: linkHandler different than "record" leads to rteerror (thanks to Martin Holtz)
